--- a/Exercícios/ex026/mq005/index.html
+++ b/Exercícios/ex026/mq005/index.html
@@ -6,12 +6,13 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
-        <menu id="opcoes">
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -32,11 +33,20 @@
         </article>
     </main>
     <script>
-        function clickMenu() {
-            if (opcoes.style.display == 'block') {
-                opcoes.style.display = 'none'
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
             } else {
-                opcoes.style.display = 'block'
+                itens.style.display = 'none'
+            }
+        }
+
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
             }
         }   
     </script>
